# --OLD--Pyrite

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md  TODO.todo  appveyor.yml  check.rs  disasm_croms  errors.txt  expanded.rs  hello.s  imgui.ini  iomap.js  iomap_read.js  iomap_write.js  line0.debug  pyrite.trace  pyrite.trace-out  watch
data/shaders/: gba.frag
data/temp/: temp.psav
debug/: aw-a.s  aw-t.s  m3_demo.s
roms/custom/: Makefile  custom_mb.elf  custom_mb.gba  disasm-arm.s  disasm-croms  disasm-thumb.s
roms/custom/include/: e_debug.h  e_printf.h
roms/custom/source/: main.c
roms/legal/: README.md
rust_imgui/: .travis.yml
rust_imgui/src/imgui/: api.rs
src/: main.rs
src/core/: device.rs  joypad.rs  memory.rs  mod.rs  registers.rs
src/core/cpu/: alu.rs  arm.rs  clock.rs  memory.rs  mod.rs  registers.rs  swi.rs  thumb.rs
src/core/cpu/arm/: arm_impl.rs  functions.rs  mod.rs  table.rs
src/core/cpu/thumb/: functions.rs  mod.rs  table.rs  thumb_dp_impl.rs  thumb_impl.rs
src/core/lcd/: mod.rs  mode0.rs  mode1.rs  mode2.rs  mode3.rs  mode4.rs  mode5.rs
src/core/memory/: ioreg.rs  mod.rs
src/debug/: armasm.rs  armdis.rs  bitdesc.rs  debugger.rs  debugger_old.rs  logging.rs  mod.rs  profiler.rs
src/debug/debugger/: console.rs  memory_editor.rs  mod.rs  profiler.rs
src/gba/: device.rs  mod.rs  serialization.rs
src/gba/core/: mod.rs
src/gba/core/cpu/: clock.rs  mod.rs  registers.rs
src/gba/core/memory/: compat.rs  ioreg.rs  mod.rs
src/gba/device/: audio.rs  events.rs  imgui_support.rs  mod.rs  video.rs
src/gba/hw/: audio.rs  dma.rs  joypad.rs  mod.rs  timers.rs
src/gba/hw/audio/: channel1.rs  channel2.rs  channel3.rs  channel4.rs  channel_ab.rs  mod.rs
src/gba/hw/lcd/: mod.rs  mode0.rs  mode1.rs  obj.rs  (+5 more)
src/pyrite/: mod.rs  settings.rs
src/util/: async_ring_buffer.rs  atomic.rs  bipbuffer.rs  circular_buffer.rs  frame_counter.rs  io.rs  measure.rs  mod.rs  sync_unsafe_cell.rs
(+18 files in other folders)
