[package]
name = "pyrite"
version = "0.1.0"
authors = ["Adolph C. <adolph.celestin@gmail.com>"]

[features]
default = ["emulate-swi"]

# The CPU will emulate software interrupts rather than
# jumping to the code in the BIOS.
emulate-swi = []

[profile.dev]
opt-level=3
# Ideally I would just like to turn overflow checking off
# because overflows happen so frequently, but this is fine I guess.
debug-assertions = false
codegen-units = 2

[profile.release]
opt-level=3
lto = true

[dependencies]
glium = "*"
time = "0.1.34"